--- a/pizzastore/src/components/style.css
+++ b/pizzastore/src/components/style.css
@@ -80,3 +80,13 @@
   width: 50px;
   display: inline-block;
 }
+.buttonAll {
+  background-color: #5f36be;
+  border-radius: 100%;
+  height: 50px;
+  margin: 10px;
+  width: 50px;
+  display: inline-block;
+}
+
+
